MNGW-5592: Fix special alignment case for French translation

--- a/app/styles/lang/_fr_CA.scss
+++ b/app/styles/lang/_fr_CA.scss
@@ -86,6 +86,18 @@ body.lang_fr_CA {
       }
     }
 
+    #floorPlan {
+      padding-left: 7px;
+      padding-right: 7px;
+      .paired-body {
+        float: left;
+      }
+      .paired-media {
+        right: 0;
+        float: right;
+      }
+    }
+
     @media (min-width: 1125px) {
       .btn-floor-plans .paired-media {
         right: 20px;
